#[build-system]
## Minimum requirements for the build system to execute.
#requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "check-bookmarks"
version = "0.1"
authors = [{ name = "Fernando Costa Bertoldi", email = "fcbertoldi@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["aiohttp", "async_timeout"]

[project.optional-dependencies]
dev = ["pytest", "black"]
